# etl-remuneracao-servidores-pa

./: pyproject.toml
src/etl/application/ports/: downloader.py  exporter.py  html_parser.py  pdf_parser.py
src/etl/application/use_cases/: __init__.py
src/etl/application/use_cases/downloaders/: cached.py  delayed.py
src/etl/domain/entities/: registro.py  remuneracao.py  servidor.py  vinculo.py
src/etl/domain/enums/: tipo_vinculo.py
src/etl/interfaces/cli/: __main__.py
