[project]
name = "etl-remuneracao-servidores-pa"
version = "0.1.0"
description = ""
authors = [
    {name = "Enzo Santos",email = "enzo.santos29@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "pypdf (>=6.12.2,<7.0.0)",
    "aiopath (>=0.7.7,<0.8.0)",
    "click (>=8.4.1,<9.0.0)",
]

[tool.poetry]
packages = [{include = "etl", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
